--- a/src/components/video/_video.css
+++ b/src/components/video/_video.css
@@ -1,64 +1,65 @@
 @import "../../_base.css";
 
 .video {
-  margin-bottom: 1rem;
-  padding: 0.7rem;
-  font-weight: 500;
-  font-size: 0.9rem;
-  cursor: pointer;
+    margin-bottom: 1rem;
+    padding: 0.7rem;
+    font-weight: 500;
+    font-size: 0.9rem;
+    cursor: pointer;
+    color: white;
 }
 
 .video__top {
-  margin-bottom: 0.5rem;
-  position: relative;
+    margin-bottom: 0.5rem;
+    position: relative;
 }
 
 .video__top .lazy-load-image-background {
-  width: 100%;
+    width: 100%;
 }
 
 .video__top img {
-  width: 100%;
+    width: 100%;
 }
 
 .video__top__duration {
-  position: absolute;
-  bottom: 0.3rem;
-  right: 0.3rem;
-  width: 45px;
-  padding: 0.2rem;
-  background: #080808ec;
-  border-radius: 3px;
+    position: absolute;
+    bottom: 0.3rem;
+    right: 0.3rem;
+    width: 45px;
+    padding: 0.2rem;
+    background: #080808ec;
+    border-radius: 3px;
 }
 
 .video__title {
-  margin-bottom: 0.1rem;
-  color: #fff;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
+    margin-bottom: 0.1rem;
+    color: #fff;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .video__details {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .video__channel {
-  display: flex;
-  align-items: center;
-  margin: 0.5rem 0;
+    display: flex;
+    align-items: center;
+    margin: 0.5rem 0;
 }
 
 .video__channel img {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  margin-right: 0.5rem;
-  cursor: pointer;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    margin-right: 0.5rem;
+    cursor: pointer;
 }
 
 .video__channel p {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
