--- a/src/components/categoriesBar/_categoriesBar.css
+++ b/src/components/categoriesBar/_categoriesBar.css
@@ -1,35 +1,37 @@
 @import "../../_base.css";
 
 .categoriesBar {
-  padding: 0.5rem 0;
-  font-size: 0.8rem;
-  display: flex;
-  overflow-x: scroll;
+    padding: 0.5rem 0;
+    font-size: 0.8rem;
+    display: flex;
+    overflow-x: scroll;
+    background-color: #16181b;
+    color: white;
 }
 
 .categoriesBar::-webkit-scrollbar {
-  width: 0px;
+    width: 0px;
 }
 
 .categoriesBar {
-  scrollbar-width: none;
+    scrollbar-width: none;
 }
 
 .categoriesBar span {
-  margin-right: 1rem;
-  padding: 0.5rem;
-  white-space: nowrap;
-  border: 1.5px solid #b1bdb4;
-  border-radius: 999px;
-  cursor: pointer;
+    margin-right: 1rem;
+    padding: 0.5rem;
+    white-space: nowrap;
+    border: 1.5px solid #b1bdb4;
+    border-radius: 999px;
+    cursor: pointer;
 }
 
 .categoriesBar span:hover {
-  background-color: #374a59;
+    background-color: #374a59;
 }
 
 .categoriesBar span.active {
-  color: #fff;
-  background-color: #606060;
-  border-color: #4c4c4c;
+    color: #fff;
+    background-color: #606060;
+    border-color: #4c4c4c;
 }
