--- a/src/components/header/_header.css
+++ b/src/components/header/_header.css
@@ -1,95 +1,96 @@
 @import "../../_base.css";
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 3rem;
-  background-color: #16181b;
-  height: 10vh;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 3rem;
+    background-color: #16181b;
+    height: 10vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    color: white;
 }
 
 .header__menu {
-  display: none;
+    display: none;
 }
 
 .header__logo {
-  width: 30px;
-  height: 30px;
-  object-fit: contain;
-  display: block;
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+    display: block;
 }
 
 .header form {
-  flex: 0.6;
-  display: flex;
-  padding: 0.1rem;
-  margin: 0 1rem;
-  border-radius: 3px;
-  border: 1.2px solid;
-  background-color: #121417;
+    flex: 0.6;
+    display: flex;
+    padding: 0.1rem;
+    margin: 0 1rem;
+    border-radius: 3px;
+    border: 1.2px solid;
+    background-color: #121417;
 }
 
 .header form input {
-  width: 100%;
-  border: none;
-  font-weight: 500;
-  background: transparent;
-  padding: 0.3rem;
-  color: #b1bdb4;
+    width: 100%;
+    border: none;
+    font-weight: 500;
+    background: transparent;
+    padding: 0.3rem;
+    color: #b1bdb4;
 }
 
 .header form input:focus {
-  outline: none;
+    outline: none;
 }
 
 .header form button {
-  padding: 0 1.25rem;
-  color: #b1bdb4;
-  background: transparent;
-  border: none;
+    padding: 0 1.25rem;
+    color: #b1bdb4;
+    background: transparent;
+    border: none;
 }
 
 .header form button:focus {
-  border: none;
+    border: none;
 }
 
 .header__icons {
-  flex: 0.15;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+    flex: 0.15;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .header__icons img {
-  border-radius: 50%;
-  width: 40px;
-  object-fit: contain;
-  margin-left: 5px;
+    border-radius: 50%;
+    width: 40px;
+    object-fit: contain;
+    margin-left: 5px;
 }
 
 @media (max-width: 520px) {
-  .header {
-    padding: 1rem;
-  }
+    .header {
+        padding: 1rem;
+    }
 
-  .header form {
-    flex: 1;
-  }
+    .header form {
+        flex: 1;
+    }
 
-  .header__menu {
-    display: block;
-  }
+    .header__menu {
+        display: block;
+    }
 
-  .header__logo {
-    display: none;
-  }
+    .header__logo {
+        display: none;
+    }
 
-  .header__icons > *:not(img) {
-    display: none;
-  }
+    .header__icons > *:not(img) {
+        display: none;
+    }
 }
