--- a/src/screens/loginScreen/loginScreen.css
+++ b/src/screens/loginScreen/loginScreen.css
@@ -1,34 +1,36 @@
 @import "../../_base.css";
 
 .login {
-  height: 100vh;
-  display: grid;
-  place-items: center;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: #000;
 }
 
 .login__container {
-  background-color: #121417;
-  padding: 2rem;
-  margin: 0 1rem;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    background-color: #424242;
+    padding: 2rem;
+    margin: 0 1rem;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
 }
 
 .login__container button {
-  padding: 0.5rem;
-  border: none;
-  border-radius: 5px;
-  margin-bottom: 1rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 1rem;
 }
 
 .login__container button:focus {
-  outline: none;
+    outline: none;
 }
 
 .login img {
-  width: 130px;
-  height: 130px;
-  object-fit: contain;
+    width: 130px;
+    height: 130px;
+    object-fit: contain;
 }
